# titanax

./: .gitignore  AGENT.md  AGENTS.md  CRITICAL_ISSUES_FIXED.md  README.md  plan.md  pyproject.toml  validate_imports.py
.github/workflows/: test.yml
examples/: README.md  fixed_issues_demo.py  minimal_dp.py  pp_minimal_two_stage.py  quickstart_example.py  tp_minimal_mlp.py
examples/mnist_dp/: README.md  __init__.py  data.py  download_mnist.py  model.py  test_minimal.py  test_synthetic.py  train.py
notes/: fix_list.md  plan.md  spec.md  updated_plan.md
notes/tasks/: P1.0_alignment_scaffolding.md  P1.1_partition_spec_utilities.md  P1.2_named_sharding_application_helpers.md  P1.3_compile_engine_integration_for_tp.md
src/titanax/: __init__.py  _version.py  compat.py  exceptions.py  quickstart.py  types.py
src/titanax/exec/: __init__.py  collectives.py  compile.py  engine.py  prng.py  step_fn.py
tests/: __init__.py  conftest.py  test_imports.py
tests/benchmarks/: __init__.py
tests/integration/: test_mnist_dp.py  test_mnist_dp_acceptance.py
tests/unit/: test_checkpoint.py  test_collectives.py  test_compat.py  test_compile.py  test_engine.py  test_error_handling.py  test_exceptions.py  test_logging_basic.py  test_logging_observability.py  test_microbatch_accumulation.py  test_optax_adapter.py  test_optim_recipes.py  test_optimizer_integration.py  test_p0_completion.py  test_plan.py  test_pp.py  test_prng.py  test_quickstart_validation.py  test_runtime.py  test_sharding_utils.py  test_tp_helpers.py
tools/: quick_validation.py  validate_imports_safe.py
(+22 files in other folders)
